<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgCcsDialogImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/main_picked_image_description"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imgCcsDialogImageReducedColors"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCcsDialogImageReducedColors"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/main_reduced_color_image_description"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@id/imgCcsDialogImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtThresholdBlackCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_conversion_settings_threshold_black_caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgCcsDialogImageReducedColors" />

    <SeekBar
        android:id="@+id/sldThresholdBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtThresholdBlackCaption" />

    <TextView
        android:id="@+id/txtThresholdRedCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:max="100"
        android:text="@string/color_conversion_settings_threshold_red_caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sldThresholdBlack" />

    <SeekBar
        android:id="@+id/sldThresholdRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtThresholdRedCaption" />

    <TextView
        android:id="@+id/txtHueAngleRedCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_conversion_settings_hue_angle_red_caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sldThresholdRed" />

    <SeekBar
        android:id="@+id/sldHueAngleRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="360"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHueAngleRedCaption" />

</android.support.constraint.ConstraintLayout>